Fixed header alignment in Safari

--- a/src/_scss/pages/keyword/header/header.scss
+++ b/src/_scss/pages/keyword/header/header.scss
@@ -42,5 +42,8 @@
                 }
             }
         }
+        &:after {
+            display: block;
+        }
     }
 }
